# serializer version: 1
# name: test_select_ok[select_as_struct]
  '''
  start
    query_statement
      query_expr
        select
          select_shape	STRUCT
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_select_ok[select_as_value]
  '''
  start
    query_statement
      query_expr
        select
          select_shape	VALUE
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_select_ok[select_from_alias_explicit]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
                as_alias
                  ident	alias1
  
  '''
# ---
# name: test_select_ok[select_from_alias_implicit]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
                as_alias
                  ident	alias1
  
  '''
# ---
# name: test_select_ok[select_from_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
            select_item
              select_expr
                column_expr
                  ident	column2
          select_from
            from_clause
              from_clause
                from_item_table
                  path_expression
                    ident	table1
              from_item_table
                path_expression
                  ident	table2
  
  '''
# ---
# name: test_select_ok[select_from_time_travel]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
                time_travel
                  column_expr
                    literal
                      string_literal	'1970-01-01'
  
  '''
# ---
# name: test_select_ok[select_kitchen_sink]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_star
            select_item
              select_expr
                column_expr
                  ident	column1
            select_item
              select_expr
                column_expr
                  subquery
                    query_expr
                      select
                        select_list
                          select_item
                            select_expr
                              column_expr
                                literal
                                  integer_literal	1
                as_alias
                  ident	column2
          select_from
            from_clause
              from_clause
                from_item_table
                  path_expression
                    ident	table1
                  as_alias
                    ident	alias1
              from_item_subquery
                subquery
                  query_expr
                    select
                      select_list
                        select_item
                          select_expr
                            column_expr
                              ident	column7
                      select_from
                        from_clause
                          from_item_table
                            path_expression
                              ident	table2
                as_alias
                  ident	alias2
  
  '''
# ---
# name: test_select_ok[select_list_alias_explicit]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
                as_alias
                  ident	alias1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_alias_implicit]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
                as_alias
                  ident	alias1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
            select_item
              select_expr
                column_expr
                  ident	column2
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_trailing_comma]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table2
  
  '''
# ---
# name: test_select_ok[select_literal]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  literal
                    integer_literal	1
  
  '''
# ---
# name: test_select_ok[select_star]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_star
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_scoped]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_dot_star
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_scoped_nested]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_dot_star
                column_expr
                  column_expr
                    ident	column1
                  ident	column2
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_subquery_ok[select_from_subquery]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_subquery
                subquery
                  query_expr
                    select
                      select_list
                        select_item
                          select_expr
                            column_expr
                              ident	column1
                      select_from
                        from_clause
                          from_item_table
                            path_expression
                              ident	table1
  
  '''
# ---
# name: test_subquery_ok[select_from_subquery_aliased]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_subquery
                subquery
                  query_expr
                    select
                      select_list
                        select_item
                          select_expr
                            column_expr
                              ident	column1
                      select_from
                        from_clause
                          from_item_table
                            path_expression
                              ident	table1
                as_alias
                  ident	table2
  
  '''
# ---
# name: test_subquery_ok[subquery]
  '''
  start
    query_statement
      query_expr
        subquery
          query_expr
            select
              select_list
                select_item
                  select_expr
                    column_expr
                      literal
                        integer_literal	1
  
  '''
# ---
# name: test_subquery_ok[subquery_nested]
  '''
  start
    query_statement
      query_expr
        subquery
          query_expr
            select
              select_list
                select_item
                  select_expr
                    column_expr
                      subquery
                        query_expr
                          select
                            select_list
                              select_item
                                select_expr
                                  column_expr
                                    subquery
                                      query_expr
                                        select
                                          select_list
                                            select_item
                                              select_expr
                                                column_expr
                                                  literal
                                                    integer_literal	1
  
  '''
# ---
# name: test_unnest_ok[unnest_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item
                from_item_unnest
                  unnest_expression
                    column_expr
                      ident	array1
  
  '''
# ---
# name: test_unnest_ok[unnest_single_alias]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item
                from_item_unnest
                  unnest_expression
                    column_expr
                      ident	array1
                    as_alias
                      ident	alias1
  
  '''
# ---
# name: test_unnest_ok[unnest_trailing]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_clause
                from_item_table
                  path_expression
                    ident	table1
              from_item
                from_item_unnest
                  unnest_expression
                    column_expr
                      ident	array1
  
  '''
# ---
# name: test_unnest_ok[unnest_trailing_alias_with_offset_alias]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_clause
                from_item_table
                  path_expression
                    ident	table1
              from_item
                from_item_unnest
                  unnest_expression
                    column_expr
                      ident	array1
                    as_alias
                      ident	alias1
                  unnest_expression_with_offset
                    as_alias
                      ident	alias2
  
  '''
# ---
# name: test_unnest_ok[unnest_trailing_with_offset]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_clause
                from_item_table
                  path_expression
                    ident	table1
              from_item
                from_item_unnest
                  unnest_expression
                    column_expr
                      ident	array1
                  unnest_expression_with_offset
  
  '''
# ---
# name: test_unnest_ok[unnest_trailing_with_offset_alias]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_clause
                from_item_table
                  path_expression
                    ident	table1
              from_item
                from_item_unnest
                  unnest_expression
                    column_expr
                      ident	array1
                  unnest_expression_with_offset
                    as_alias
                      ident	alias1
  
  '''
# ---
